k8s/manifests/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend2
  labels:
    app: backend2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend2
  template:
    metadata:
      labels:
        app: backend2
    spec:
      containers:
        - name: backend2
          image: xtream662/task1b:latest
          ports:
            - name: http
              containerPort: 80
          resources:
            limits:
              cpu: 40m
              memory: 100Mi
