k8s/manifests/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: backend2
  name: backend2
spec:
  selector:
    app: backend2
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 3000
